--- a/assets/css/wlsm-dashboard.css
+++ b/assets/css/wlsm-dashboard.css
@@ -236,7 +236,7 @@
 .wlsm-menu-btn:checked ~ .wlsm-menu-label:not(.steps) .wlsm-menu-icon:after {
 	top: 0;
 }
-@media(min-width: 768px) {
+/* @media(min-width: 768px) { */
 	.wlsm-container .wlsm-navigation-links {
 		box-sizing: border-box;
 		width: 20%;
@@ -268,7 +268,7 @@
 	.wlsm-container .wlsm-menu-label {
 		display: none;
 	}
-}
+/* } */
 @media(min-width: 600px) {
 	.wlsm-l-w-30 {
 		width: 30%;
