--- a/assets/css/wlsm-dashboard.css
+++ b/assets/css/wlsm-dashboard.css
@@ -129,7 +129,7 @@
 	padding: 12px 45px 20px;
 	border-bottom: 1px solid #dedede;
 }
-@media ( max-width: 768px ) {
+/* @media ( max-width: 768px ) { */
 	.wlsm-container .wlsm-st-details {
 		/* padding: 0; */
 		margin-bottom: 1.5rem;
@@ -137,7 +137,7 @@
 	.wlsm-container .wlsm-parent-students .wlsm-parent-student-links {
 		margin-top: .5rem;
 	}
-}
+/* } */
 .wlsm-container .wlsm-parent-student-section {
 	box-shadow: 1px 1px 4px rgba(0, 0, 0, .3);
 }
@@ -170,13 +170,13 @@
 	display: table;
 	clear: both;
 }
-@media screen and (max-width: 768px) {
+/* @media screen and (max-width: 768px) { */
 	.wlsm-container .wlsm-parent-student-detail,
 	.wlsm-container .wlsm-parent-student-links {
 		display: block;
 		width: 100%;
 	}
-}
+/* } */
 /* Menu icon */
 .wlsm-container .wlsm-navigation-links {
 	z-index: 3;
@@ -269,7 +269,7 @@
 		display: none;
 	}
 /* } */
-@media(min-width: 600px) {
+/* @media(min-width: 600px) { */
 	.wlsm-l-w-30 {
 		width: 30%;
 	}
@@ -285,4 +285,4 @@
 	.wlsm-l-w-70 {
 		width: 70%;
 	}
-}
+/* } */
