--- a/assets/css/wlsm-dashboard.css
+++ b/assets/css/wlsm-dashboard.css
@@ -40,7 +40,8 @@
 	box-shadow: 1px 1px 2px #adadad;
 }
 .wlsm-container {
-	box-sizing: border-box;
+    box-sizing: border-box;
+    padding-top: 20px;
 }
 .wlsm-container .wlsm-content-area {
 	box-sizing: border-box;
@@ -293,7 +294,4 @@
 	.wlsm-l-w-70 {
 		width: 70%;
 	}
-}
-.wlsm-logged-in-text .wlsm-logout-link{
-    display: none;
 }
